--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,11 @@
 h5.card-title{
-  color: green;
+  color: rgba(0, 109, 128, 0.589);
 }
 
 .blog-footer {
     padding: 2.5rem 0;
-    color: #999;
+    color: rgb(153, 153, 153);
     text-align: center;
     background-color: #f9f9f9;
-    border-top: .05rem solid #e5e5e5;
+    border-top: .05rem solid #e5e5e56e;
 }
